--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,17 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/background"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_height"
-        android:background="@color/colorPrimary"
-        />
+        android:background="@color/colorPrimary" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,137 +19,147 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="15dp">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/layout_margin_main"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/part_event_height"
                 android:orientation="horizontal"
                 >
 
                 <TextView
                     android:id="@+id/event_name_view"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:onClick="onClick"
                     android:text="@string/event_name"
-                    android:textSize="@dimen/text_size"
-                    android:onClick="onClick"/>
+                    android:textSize="@dimen/text_size" />
+
 
                 <TextView
                     android:id="@+id/in_work_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape"
-                    android:text="@string/in_work"
-                    android:textSize="@dimen/text_size"
-                    android:layout_marginLeft="60dp"
                     android:onClick="onClick"
+                    android:paddingBottom="@dimen/padding_in_work"
+                    android:text="@string/in_work"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/text_size"
+                    android:layout_marginLeft="55dp"
                     />
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_height="@dimen/height_divide"
                 android:background="@android:color/darker_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/part_event_height"
+                android:layout_marginBottom="@dimen/margin_top_bottom_event"
+                android:layout_marginTop="@dimen/margin_top_bottom_event"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/create_event_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="onClick"
+                    android:paddingTop="@dimen/paddingTop_event"
                     android:text="@string/create_event"
-                    android:textSize="@dimen/text_size"
-                    android:onClick="onClick"/>
+                    android:textColor="@color/darkGrey"
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/date_create_event_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
-                    android:text="@string/date_create_event"
-                    android:onClick="onClick"/>
+                    android:onClick="onClick"
+                    android:text="@string/date_create_event" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_height="@dimen/height_divide"
                 android:background="@android:color/darker_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/part_event_height"
+                android:layout_marginBottom="@dimen/margin_top_bottom_event"
+                android:layout_marginTop="@dimen/margin_top_bottom_event"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/reg_event_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="onClick"
+                    android:paddingTop="@dimen/paddingTop_event"
                     android:text="@string/regist_event"
-                    android:textSize="@dimen/text_size"
-                    android:onClick="onClick"/>
+                    android:textColor="@color/darkGrey"
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/date_reg_event_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
-                    android:text="@string/date_regist_event"
-                    android:onClick="onClick"/>
+                    android:onClick="onClick"
+                    android:text="@string/date_regist_event" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_height="@dimen/height_divide"
                 android:background="@android:color/darker_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/part_event_height"
+                android:layout_marginBottom="@dimen/margin_top_bottom_event"
+                android:layout_marginTop="@dimen/margin_top_bottom_event"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/resolve_event_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:onClick="onClick"
+                    android:paddingTop="@dimen/paddingTop_event"
                     android:text="@string/resolve_to"
-                    android:textSize="@dimen/text_size"
-                    android:onClick="onClick"/>
+                    android:textColor="@color/darkGrey"
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/date_resolve_event_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
-                    android:text="@string/resolve_to_date"
-                    android:onClick="onClick"/>
+                    android:onClick="onClick"
+                    android:text="@string/resolve_to_date" />
 
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_height="@dimen/height_divide"
                 android:background="@android:color/darker_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/part_event_height"
+                android:layout_marginBottom="@dimen/margin_top_bottom_event"
+                android:layout_marginTop="@dimen/margin_top_bottom_event"
                 android:orientation="horizontal">
 
                 <TextView
@@ -159,41 +167,43 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:onClick="onClick"
+                    android:paddingTop="@dimen/paddingTop_event"
                     android:text="@string/liable"
-                    android:textSize="@dimen/text_size"
-                    android:onClick="onClick"/>
+                    android:textColor="@color/darkGrey"
+                    android:textSize="@dimen/text_size" />
 
                 <TextView
                     android:id="@+id/date_liable_event_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="end"
-                    android:text="@string/liable_name"
-                    android:onClick="onClick"/>
+                    android:onClick="onClick"
+                    android:text="@string/liable_name" />
             </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_height="@dimen/height_divide"
                 android:background="@android:color/darker_gray" />
 
             <TextView
                 android:id="@+id/describe_event_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/describe_event"
-                android:onClick="onClick"/>
+                android:layout_gravity="start"
+                android:onClick="onClick"
+                android:layout_marginBottom="@dimen/margin_top_bottom_event"
+                android:layout_marginTop="@dimen/margin_top_bottom_event"
+                android:text="@string/describe_event" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/event_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="horizontal"
-                android:layout_marginEnd="30dp"
                 android:onClick="onClick"
+                android:scrollbars="horizontal"
+
                 >
 
             </android.support.v7.widget.RecyclerView>
